src/test/deca/context/invalid/ext/TAB_decl_after_instr.deca
{
    float[][] c = new float [9 ][1];;
    float[] d = new float [ 8];
}